--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,3 +1,5 @@
+-r requirements.txt
+
 pip==19.2.3
 bump2version==0.5.11
 wheel==0.33.6
@@ -10,3 +12,6 @@ twine==1.14.0
 Click==7.0
 pytest==4.6.5
 pytest-runner==5.1
+black==19.10b0
+
+-e .
